--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/3/superhero/bootstrap.min.css"
+      href="https://bootswatch.com/3/journal/bootstrap.min.css"
     />
 
     <!--
